Search VC design completed

--- a/Weather/Weather/en.lproj/Localizable.strings
+++ b/Weather/Weather/en.lproj/Localizable.strings
@@ -11,4 +11,5 @@
 "Use current location" = "Use current location";
 "Search" = "Search";
 "Location" = "Location";
-
+"Daily" = "Daily";
+"Hourly" = "Hourly";
