--- a/Weather/Weather/tr.lproj/Localizable.strings
+++ b/Weather/Weather/tr.lproj/Localizable.strings
@@ -11,3 +11,5 @@
 "Use current location" = "Geçerli konumu kullan";
 "Search" = "Ara";
 "Location" = "Konum";
+"Daily" = "Günlük";
+"Hourly" = "Saatlik";
